--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^4.17.3",
     "express-handlebars": "^6.0.3",
+    "moment": "^2.29.1",
     "nodemon": "^2.0.15",
     "router": "^1.3.6",
     "socket.io": "^4.4.1"
